-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 15.0.0-beta1
-
a22e79f38 (15.0)
Steps to reproduce:
- Install Boot to Qt toolchain (6.8.0 used) and Qt C 15.0.0 beta1
- do the usual device setup stuff and enable debugging/profiling from QtC Projects -> Build Settings
- open a Qt Quick application or create one with the Application Wizard
- start profiling
Expected result:
Profiler starts and no errors are shown
Actual result:
Profiling does not start and an error dialog saying: "Could not connect to the in-process QML profiler within 2s. Do you want to retry and wait 4 s?"
If one presses 'Retry' immediately a new dialog is shown (before the 4 s has passed) and one can click the dialog so often that the numbers in retry in x secs turn to have minus in front and ultimately the dialog says: "Could not connect to in-process QML profiler in 0 s. Do you want to retry and wait 0 s?"
Not host specific. Can be reproduced on Windows, Linux and macOS with Boot to Qt (6.8.0) toolchain.
- relates to
-
QTCREATORBUG-31896 QML profiler doesn't start
-
- Closed
-