QML Profiler: Fix server URL

QMLProfileRunner should use server URL from the ports gatherer
instead of trying to read it from the data record.

Amends: 94b63ad3b4b13dbad0277341f71c5d8f5ea1c6b2

Fixes: QTCREATORBUG-31847
Change-Id: Id54429f09cc10f17d763ede6db4df1fad8a323fe
Reviewed-by: hjk <hjk@qt.io>